--- a/task_2/style.css
+++ b/task_2/style.css
@@ -48,9 +48,17 @@ input[type=checkbox]:checked+label {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    position: relative;
+    left: 50%;
 }
 
 #struk{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nama-benda{
     display: flex;
     justify-content: center;
     align-items: center;
